<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Profile Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingBottom="16dp">

                <ImageView
                    android:id="@+id/imageViewProfile"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/muneco"
                    android:contentDescription="Profile Image"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:id="@+id/textViewUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usernamefragsettings"
                    android:textSize="18sp"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configuracionfragsettings"
                android:textSize="24sp"
                android:textStyle="bold"
                android:paddingBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aplicacionfragsettings"
                android:textSize="18sp"
                android:paddingBottom="8dp"/>

            <RadioGroup
                android:id="@+id/themeRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radioLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clarofragsettings" />
                <RadioButton
                    android:id="@+id/radioDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oscurofragsettings" />
            </RadioGroup>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginVertical="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idiomafragsettings"
                android:textSize="18sp"
                android:paddingBottom="8dp"/>

            <Spinner
                android:id="@+id/languageSpinner"
                android:layout_width="364dp"
                android:layout_height="58dp"
                android:entries="@array/languages" />

            <Button
                android:id="@+id/btnGuardarConfiguraciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardarfragsettings"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"/>
        </LinearLayout>


    </ScrollView>
</FrameLayout>
