<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/fondo"
    tools:context=".Login">


    <androidx.cardview.widget.CardView
        android:translationY="320dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:clipChildren="false"
        android:clipToPadding="false">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="105dp"
            android:layout_gravity="center_horizontal|top"
            android:scaleType="centerCrop"
            android:layout_marginTop="20dp"
            android:src="@drawable/usuario"
            android:translationY="-30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="800dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edittext"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/logintext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:text="@string/welcomelogin"
                android:textAlignment="center"
                android:textColor="@color/amarillo"
                android:textSize="36sp"
                android:textStyle="bold"
                android:translationY="-20dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/emaillogin"
                android:padding="8dp"
                android:textColor="@color/black"
                android:translationY="-20dp" />

            <EditText
                android:id="@+id/contrasena"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/contrasenalogin"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:translationY="-28dp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/amarillo"
                android:text="@string/iniciarlogin"
                android:textSize="18sp"
                android:translationY="-40dp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/registrobtn"
                android:layout_width="303dp"
                android:layout_height="62dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:onClick="registro"
                android:text="@string/registerlogin"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:translationY="-40dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
