<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/fondo"
    tools:context=".Registro">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:translationY="320dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="873dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edittext"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="20dp"
            >

            <TextView
                android:id="@+id/logintext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/SignupRegistro"
                android:textAlignment="center"
                android:textColor="@color/amarillo"
                android:textSize="36sp"
                android:textStyle="bold"
                android:translationY="-60dp"/>
            <EditText
                android:id="@+id/nombres"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/nombresRegistro"
                android:padding="8dp"
                android:textColor="@color/black"
                android:translationY="-60dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/emailRegistro"
                android:padding="8dp"
                android:textColor="@color/black"
                android:translationY="-60dp"/>

            <EditText
                android:id="@+id/contrasena"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/contraRegistro"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:translationY="-60dp"/>

            <Button
                android:id="@+id/registroButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/amarillo"
                android:text="@string/registerRegistro"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                android:translationY="-58dp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="303dp"
                android:layout_height="62dp"
                android:gravity="center"
                android:onClick="login"
                android:text="Regresar"
                android:textColor="@color/black"
                android:textStyle="bold" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>